camo-derive/tests/fail/macros.stderr
error: `camo` does not support macros
 --> tests/fail/macros.rs:9:8
  |
9 |     f: foo!(),
  |        ^^^
